<resources>
    <string name="app_name">Location Reminder</string>
    <string name="add_fab_content_description">Кнопка добавления новой записи</string>
    <string name="add_note_fragment_label">Добавить запись</string>
    <string name="notes_list_fragment_label">Записи</string>
    <string name="note_name_edit_hint">Введите название</string>
    <string name="note_description_edit_hint">Введите описание</string>
    <string name="no_data_empty_block_label">Нет записей</string>
    <string name="note_info_fragment_label">Информация</string>
    <string name="drawable_location">Местоположение</string>
    <string name="select_destination_text">Укажите местоположение для напомнинания</string>
    <string name="save_note_fab_content_description">Сохранение</string>
    <string name="permissions_fragment_label">Разрешение</string>
    <string name="map_fragment_label">Карта</string>
    <string name="map_point_chosen">Точка выбрана</string>
    <string name="map_poi_chosen">Выбрано: %s</string>
    <string name="settings_location_permission_text">Невозможно получить разрешение на местоположение. Перейдите в настройки приложения для предоставления разрешения. Открыть настройки?</string>
    <string name="settings_location_permission_positive">Да</string>
    <string name="settings_location_permission_negative">Нет</string>

    <string name="tracking_notification_channel_id">tracking_channel</string>
    <string name="tracking_notification_channel_name">Отслеживание местоположения</string>
    <string name="turn_on_location_fab_content_description">Включить отслеживание локации</string>
    <string name="empty_box_drawable_descrtiption">empty_box</string>
    <string name="reached_notification_channel_name">Достижение геозоны</string>
    <string name="reached_notification_channel_id">reached_channel</string>
    <string name="update_note_label">Изменение</string>
</resources>