<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notesListFragment">

    <fragment
        android:id="@+id/notesListFragment"
        android:name="com.example.locationreminder.presentation.fragments.NotesListFragment"
        android:label="@string/notes_list_fragment_label"
        tools:layout="@layout/fragment_notes_list">
        <action
            android:id="@+id/action_notesListFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
        <action
            android:id="@+id/action_notesListFragment_to_noteInfoFragment"
            app:destination="@id/noteInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.example.locationreminder.presentation.fragments.AddNoteFragment"
        android:label="@string/add_note_fragment_label"
        tools:layout="@layout/fragment_add_note"/>
    <fragment
        android:id="@+id/noteInfoFragment"
        android:name="com.example.locationreminder.presentation.fragments.NoteInfoFragment"
        android:label="@string/note_info_fragment_label"
        tools:layout="@layout/fragment_note_info">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>